[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/screen_off.png" type="Texture" id=2]
[ext_resource path="res://assets/screen_on.png" type="Texture" id=3]
[ext_resource path="res://UI/StartMenuButton.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/lightswitch_temp.png" type="Texture" id=5]
[ext_resource path="res://UI/ClickMe.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/404049__deathscyp__breaker-1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/524308__bertsz__corporate-company-introduction-video.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.937255, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_size = 1

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="OnTextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="OffTextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="ClickMe" type="TextureRect" parent="."]
visible = false
margin_left = 50.0
margin_top = 33.0
margin_right = 94.0
margin_bottom = 65.0
texture = ExtResource( 6 )
expand = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 63.0
margin_right = -122.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 47.0
margin_top = 35.0
margin_right = 87.0
margin_bottom = 51.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 16.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
shortcut_in_tooltip = false
text = "START"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_top = 41.0
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 6
text = "IN / VISIBLE"
align = 1

[node name="LightButton" type="TextureButton" parent="."]
margin_left = 85.0
margin_top = 29.0
margin_right = 95.0
margin_bottom = 39.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton2" type="TextureButton" parent="."]
margin_left = 89.0
margin_top = 1.0
margin_right = 99.0
margin_bottom = 11.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton3" type="TextureButton" parent="."]
margin_left = 31.0
margin_top = 65.0
margin_right = 41.0
margin_bottom = 75.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton4" type="TextureButton" parent="."]
margin_left = 147.0
margin_top = 59.0
margin_right = 157.0
margin_bottom = 69.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton5" type="TextureButton" parent="."]
margin_left = 159.0
margin_top = 19.0
margin_right = 169.0
margin_bottom = 29.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton6" type="TextureButton" parent="."]
margin_left = 165.0
margin_top = 93.0
margin_right = 175.0
margin_bottom = 103.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton7" type="TextureButton" parent="."]
margin_left = 205.0
margin_top = 105.0
margin_right = 215.0
margin_bottom = 115.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="LightButton8" type="TextureButton" parent="."]
margin_left = 99.0
margin_top = 119.0
margin_right = 109.0
margin_bottom = 129.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
flip_v = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MenuSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="LightButton" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton2" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton3" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton4" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton5" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton6" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton7" to="." method="_on_LightButton_pressed"]
[connection signal="pressed" from="LightButton8" to="." method="_on_LightButton_pressed"]
